--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
       <div class="container">
         <nav>
-          <img src="images/Logo.png" class="logo" />
+          <img src="http://drive.google.com/uc?export=view&id=1wtaJkjunpMGvdxn6bE3p0oxs78cmWwbV" class="logo" />
           <ul id="sidemenu">
             <li><a href="#homel">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -44,7 +44,7 @@
         <div class="container">
           <div class="row">
             <div class="about-col-1">
-              <img src="images/Gans3.png" />
+              <img src="http://drive.google.com/uc?export=view&id=1zg1djOWJ93QY9AMtpdUEn5MNjZHwMj46" />
             </div>
 
             <div class="about-col-2">
